--- a/brain4it-server/brain4it-server-standalone/src/main/conf/server.properties
+++ b/brain4it-server/brain4it-server-standalone/src/main/conf/server.properties
@@ -27,7 +27,7 @@ storeClass=org.brain4it.server.store.FileSystemStore
 
 # libraries: a comma separated string that contains the name of the libraries 
 # to load at startup. By default only Core and Module libraries are loaded.
-#libraries=Database,Kafka,Mail,Mqtt,Neural,Nlp,Serial,Tts,Vision,Weather,Xmpp
+#libraries=Database,Kafka,Mail,Management,Modbus,Mqtt,Neural,Nlp,Serial,Tts,Vision,Weather,Xmpp
 
 # accessKey: the server access key. That key grants access to all modules 
 # in the server. By default its value is null and the server is unprotected.
