New ModbusWriteFunction to write registers of a modbus server.

--- a/brain4it-lib/brain4it-lib-modbus/src/main/resources/org/brain4it/lib/ModbusLibrary.properties
+++ b/brain4it-lib/brain4it-lib-modbus/src/main/resources/org/brain4it/lib/ModbusLibrary.properties
@@ -22,6 +22,16 @@ ModbusRead.registers = The type of registers to read: <holding>, <input>, \
 <coils> or <discrete>. Its default value is <holding>.
 ModbusRead.server = The address of the modbus slave device. <1> by default.
 ModbusRead.address = The address of the first register to read. <0> by default.
-ModbusRead.quantity = The number of registers to read starting from <address>.
+ModbusRead.quantity = The number of registers to read starting from <address>.\
+<1> by default.
 ModbusRead.result = A list that contains the values of the registers to read.
+
+ModbusWrite.synopsis = Write registers of a modbus slave device.
+ModbusWrite.description = Returns the value or values written.
+ModbusWrite.mid = The modbus master identifier.
+ModbusWrite.server = The address of the modbus slave device. <1> by default.
+ModbusWrite.address = The address of the first register to write. <0> by default.
+ModbusWrite.value = A single value (number or boolean) or list of values \
+to write starting from <address>.
+ModbusWrite.result = The values written.
 
