Kafka Library: More configuration available and KafkaCommitFunction to commit kafka group offsets

--- a/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
+++ b/brain4it-lib/brain4it-lib-kafka/src/main/resources/org/brain4it/lib/KafkaLibrary.properties
@@ -1,3 +1,8 @@
+KafkaCommit.synopsis = Commits the current offsets for the consumer
+KafkaCommit.description = Forces a commit of the current offsets for the specified Kafka consumer. Useful when auto-commit is disabled and you want to manually control when offsets are persisted.
+KafkaCommit.consumer_id = Identifier of the consumer whose offsets will be committed, provided by <kafka-consumer>.
+KafkaCommit.committed = True if the commit was successful, false otherwise.
+
 KafkaConsumer.synopsis = Creates and registers locally a Kafka consumer object
 KafkaConsumer.description = Instantiates a Kafka consumer client wihout \
 communicating to the Kafka server.
