--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /brain4it-lang/target/
+/brain4it-common/target/
 /brain4it-client-java/target/
 /brain4it-server-constants/target/
 /brain4it-lib/brain4it-lib-core/target/
@@ -11,6 +12,10 @@
 /brain4it-lib/brain4it-lib-tts/target/
 /brain4it-lib/brain4it-lib-vision/target/
 /brain4it-lib/brain4it-lib-xmpp/target/
+/brain4it-lib/brain4it-lib-kafka/target/
+/brain4it-lib/brain4it-lib-modbus/target/
+/brain4it-lib/brain4it-lib-neural/target/
+/brain4it-lib/brain4it-lib-weather/target/
 /brain4it-manager/brain4it-manager-common/target/
 /brain4it-manager/brain4it-manager-swing/target/
 /brain4it-manager/brain4it-manager-web/target/
